# pyveb

./: .gitignore  LICENSE  local.ipynb  pyproject.toml  readme.md  solid_rs_client.py  test.ipynb  test.json  test_dbt_client.ipynb
.github/workflows/: codeql.yml  deploy.yml
pyveb_venv/: pyvenv.cfg
src/pyveb/: api_client.py  common.py  config.py  custom_decorators.py  dbt_client.py  excel_client.py  ftp_client.py  logger.py  lynx_client.py  parser.py  request_client.py  rs_client.py  s3_client.py  selenium_client.py  sharepoint_client.py  sharepoint_client_test.py  spark_client.py  sql_terra_client.py  tableau_client.py  tf_client.py
src/pyveb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
