[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
version = "0.2.30"
name = "pyveb"
authors = ["pieter <pieter.de.petter@veb.be>"]
description = "Package containing common code and reusable components for pipelines and dags"
readme = "readme.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
requests="2.27.1"
selenium="^4.5.0"
webdriver-manager="3.4.1"
boto3="1.24.24"
pyyaml="6.0"
simple-ddl-parser="0.26.5"
pyspark="^3.0.0"
psycopg2-binary="2.9.1"
psutil="^5.9.0"
pandas="1.3.2"
numpy="1.21.2"
s3fs="0.4.2"
pyarrow="5.0.0"
pyodbc="4.0.30"
xlrd="^2.0.0"
attrdict="^2.0.1"
Office365-REST-Python-Client="^2.4.0"
xlsxwriter="^3.1.0"

[tool.poetry.urls]
"Homepage" = "https://vlaamsenergiebedrijf.visualstudio.com/Terra/_git/terra-etl?path=/common_code"
