[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
version = "4.0.9"
name = "pyveb"
authors = ["pieter <pieter.de.petter@veb.be>", "wout <wout.spaas@veb.be>"]
description = "Package containing common code and reusable components for pipelines and dags"
readme = "readme.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "3.13.12"
requests = "2.32.5"
selenium = "4.40.0"
webdriver-manager = "4.0.2"
boto3 = "1.42.42"
botocore = "1.42.42"
pyyaml = "6.0.3"
simple-ddl-parser = "1.10.0"
pyspark = "4.1.1"
psycopg2-binary = "2.9.11"
psutil = "7.2.2"
pandas = "2.3.3"
numpy = "2.4.2"
s3fs="2026.2.0"
pyarrow = "23.0.0"
pyodbc = "5.3.0"
xlrd = "2.0.2"
Office365-REST-Python-Client = "2.6.2"
xlsxwriter = "3.2.9"

[tool.poetry.urls]
"Homepage" = "https://vlaamsenergiebedrijf.visualstudio.com/Terra/_git/terra-etl?path=/common_code"
